--- a/Test/Injector.UnitTest/Injector.UnitTest.csproj
+++ b/Test/Injector.UnitTest/Injector.UnitTest.csproj
@@ -9,8 +9,8 @@
     <ProjectGuid>{02CCFBC6-A2C7-4BDC-8DF8-E949B5295011}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>InstanceFactory.UnitTest</RootNamespace>
-    <AssemblyName>InstanceFactory.UnitTest</AssemblyName>
+    <RootNamespace>Injector.UnitTest</RootNamespace>
+    <AssemblyName>Injector.UnitTest</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -46,6 +46,7 @@
     </CodeAnalysisDependentAssemblyPaths>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="InstanceFactoryTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SynchronizedDictionaryTest.cs" />
   </ItemGroup>
